--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -9,18 +9,18 @@ sections:
   label: Pages Estonian
   create: all
   match: "**/*"
-  exclude: "*/*/howto"
+  exclude: "**/*/howto"
 - type: directory
   path: content/russian
   label: Pages Russian
   create: all
   match: "**/*"
-  exclude: "*/howto"
+  exclude: "/*/howto"
 - type: directory
   path: content/english
   label: Pages English
   create: all
-  match: "**/*"
+  match: "/howto"
   exclude: "*/howto"
 - type: directory
   path: ''
